--- a/static/styles.css
+++ b/static/styles.css
@@ -1,22 +1,23 @@
+/* Cool fonts like Dela Gothic, Inter, and Fira Code with ligatures*/
+
 @font-face {
   font-family: "Dela Gothic One";
-  src: url("./woff2/DelaGothicOne-Regular.ttf");
+  src: url("fonts/DelaGothicOne-Regular.ttf");
 }
 
 @font-face {
   font-family: 'Inter';
-  src: url('woff2/Inter_Variable.ttf');
+  src: url('fonts/Inter_Variable.ttf');
 }
 
 @font-face {
   font-family: 'Fira Code VF';
-  src: url('woff2/FiraCode-VF.woff2') format('woff2-variations'),
-       url('woff/FiraCode-VF.woff') format('woff-variations');
-  /* font-weight requires a range: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Fonts/Variable_Fonts_Guide#Using_a_variable_font_font-face_changes */
+  src: url('fonts/FiraCode-VF.woff2') format('woff2-variations');
   font-weight: 300 700;
   font-style: normal;
 }
 
+/* Moves the text up and down. */
 @keyframes wave-text {
   0% {
     transform: translateY(0em);
@@ -42,6 +43,7 @@
 }
 
 
+/* Delay animation so it is wavy. */
 .logo span:nth-of-type(1) {
   animation-delay: 0s;
 }
@@ -236,4 +238,13 @@ body {
 
 .alert-content {
   padding: 16px;
+}
+
+input {
+  border-radius: 0.5em;
+  background-color: #242424;
+  outline: none;
+  border: none;
+  padding: 0.1em;
+  box-shadow: 0 0 0.5em #bca4e3;
 }
