--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             </button>
         </div>
         <br>
-        <div class="textarea-box">
+        <div class="textarea-box" id="textarea-box">
             <textarea class="fira" placeholder="Start Typing...&#10;Press Ctrl + M to generate text, Ctrl + Shift + C for changing the model;" spellcheck="false" id="textbox"></textarea>
         </div>
         <br>
